FIX: fields wrapped in container on contacts page

--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -264,6 +264,10 @@ label {
     input + button {
       margin-left: 10px;
     }
+
+    .form-group {
+      flex: 1;
+    }
   }
 
   @include media-breakpoint-down($desktop-breakpoint) {
